syntax = "proto3";

package ecommerce;

option go_package = "github.com/kevalsabhani/grpc-order-management-service/service";

message Order {
  string id = 1;
  repeated string items = 2;
  string decription = 3;
  float price = 4;
  string destination = 5;
}

message OrderID {
  string value = 1;
}

service OrderManagement {
  rpc getOrder(OrderID) returns (Order);
  rpc addOrder(Order) returns (OrderID);
}